<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.3.4.RELEASE</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>
  <groupId>com.example</groupId>
  <artifactId>crypto-hash</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>crypto-hash</name>
  <packaging>pom</packaging>
  <description>Demo project showing usage of hash functions</description>

  <properties>
    <java.version>11</java.version>
  </properties>

  <modules>
    <module>util</module>
    <module>warehouse</module>
    <module>payments</module>
  </modules>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>org.junit.vintage</groupId>
          <artifactId>junit-vintage-engine</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>2.0.2</version>
        <configuration>
          <java>
            <googleJavaFormat>
              <version>1.8</version>
            </googleJavaFormat>
          </java>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
